# query-assistant

./: .env.example  .gitignore  README.md  examples.gist  main.py  pyproject.toml  requirements.txt
src/: cli.py  config.py  database.py  history.py  main.py  nlp.py
